# CV-Test

./: README.md
Shi_Tomasi_Test/: CMakeLists.txt  Shi_Tomasi_Test.kdev4  main.cpp
Shi_Tomasi_Test/.kdev4/: Shi_Tomasi_Test.kdev4  _custom.kdev4
